      (Lukáš Lalinský)

    * ``bzr status`` now honours FILE parameters for conflict lists
      (Aaron Bentley, #127606)

    * ``bzr checkout`` now honours -r when reconstituting a working tree.
      It also honours -r 0.  (Aaron Bentley, #127708)

    * ``bzr add *`` no more fails on Windows if working tree contains
      non-ascii file names. (Kuno Meyer, #127361)

  IMPROVEMENTS:

    * Don't show "dots" progress indicators when run non-interactively, such
      as from cron.  (Martin Pool)

    * ``info`` now formats locations more nicely and lists "submit" and
      "public" branches (Aaron Bentley)

    * New ``pack`` command that will trigger database compression within
      the repository (Robert Collins)

    * Implement ``_KnitIndex._load_data`` in a pyrex extension. The pyrex
      version is approximately 2-3x faster at parsing a ``.kndx`` file.
      Which yields a measurable improvement for commands which have to
      read from the repository, such as a 1s => 0.75s improvement in
      ``bzr diff`` when there are changes to be shown.  (John Arbash Meinel)

    * Merge is now faster.  Depending on the scenario, it can be more than 2x
      faster. (Aaron Bentley)

    * Give a clearer warning, and allow ``python setup.py install`` to
      succeed even if pyrex is not available.
      (John Arbash Meinel)

    * ``DirState._read_dirblocks`` now has an optional Pyrex
      implementation. This improves the speed of any command that has to
      read the entire DirState. (``diff``, ``status``, etc, improve by
      about 10%).
      ``bisect_dirblocks`` has also been improved, which helps all
      ``_get_entry`` type calls (whenever we are searching for a
      particular entry in the in-memory DirState).
      (John Arbash Meinel)

    * ``bzr pull`` and ``bzr push`` no longer do a complete walk of the 
      branch revision history for ui display unless -v is supplied.
      (Robert Collins)
